--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,31 @@
-django==3.0
+asgiref==3.6.0
+astroid==2.15.0
+attrs==22.2.0
+certifi==2022.12.7
+dill==0.3.6
+Django==3.0
+entrypoints==0.3
+exceptiongroup==1.1.0
 flake8==3.7.0
+iniconfig==2.0.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.6.1
+packaging==23.0
+platformdirs==3.1.0
+pluggy==1.0.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pylint==2.16.4
+pytest==7.2.1
 pytest-django==3.9.0
+pytz==2022.7.1
+sentry-sdk==1.16.0
+six==1.16.0
+sqlparse==0.4.3
+tomli==2.0.1
+tomlkit==0.11.6
+typing_extensions==4.5.0
+urllib3==1.26.15
+whitenoise==6.4.0
+wrapt==1.15.0
