--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,24 @@
 version: 2.1
 
-orbs:
-  python: circleci/python@1.5.0
-  #sentry: sentry/getsentry@1.0.10
-
 jobs:
   build-and-test:
-    executor: python/default
+    docker:
+      - image: circleci/python:3.9.7-buster
     steps:
       - checkout
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "requirements.txt" }}
             - v1-dependencies-
-      - run: python -m venv venv
-      - run: . venv/bin/activate
-      - run: pip install -r requirements.txt
+      - run:
+          name: Set up Python virtual environment
+          command: |
+            python -m venv venv
+            . venv/bin/activate
+      - run:
+          name: Install Python dependencies
+          command: |
+            pip install -r requirements.txt
       - save_cache:
           paths:
             - ./venv
@@ -35,19 +38,16 @@ jobs:
             docker build -t oc_lettings .
             docker tag oc_lettings $DOCKER_LOGIN/oc_lettings
             docker push $DOCKER_LOGIN/oc_lettings
-      # - sentry/notify:
-      #     environment: production
-      #     input_dsn: $SENTRY_DSN
-      #     version: $CIRCLE_SHA1
-      #     message: Deployment completed
+      - run:
+          name: Notify Sentry of deployment
+          command: |
+            curl -X POST \
+            -H 'Content-Type: application/json' \
+            -H "Authorization: Bearer $SENTRY_AUTH_TOKEN" \
+            -d "{\"version\": \"$CIRCLE_SHA1\"}" \
+            "https://sentry.io/api/0/projects/openclassrooms-rj/oc_lettings/releases/"
 
 workflows:
   build:
     jobs:
       - build-and-test
-
-executors:
-  python/default:
-    docker:
-      - image: circleci/python:3.9.7-buster
-    working_directory: ~/repo
