--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.6.0
 astroid==2.15.0
 attrs==22.2.0
+black==23.1.0
 certifi==2022.12.7
+click==8.1.3
 dill==0.3.6
 Django==3.0
 entrypoints==0.3
@@ -11,7 +13,9 @@ iniconfig==2.0.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.6.1
+mypy-extensions==1.0.0
 packaging==23.0
+pathspec==0.11.1
 platformdirs==3.1.0
 pluggy==1.0.0
 pycodestyle==2.5.0
