--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,8 @@ jobs:
       - run:
           name: Pytest
           command: |
-            pytest --cov=.
+            . venv/bin/activate
+            pytest
       - run:
           name: Containerize
           command: |
