--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,10 +39,10 @@ jobs:
       - run:
           name: Containerize
           command: |
-            docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+            echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_LOGIN --password-stdin
             docker build -t oc_lettings .
-            docker tag oc_lettings $DOCKER_LOGIN/oc_lettings
-            docker push $DOCKER_LOGIN/oc_lettings
+            docker tag oc_lettings $DOCKER_LOGIN/$DOCKER_REPO:$CIRCLE_SHA1
+            docker push $DOCKER_LOGIN/$DOCKER_REPO:$CIRCLE_SHA1
       - run:
           name: Notify Sentry of deployment
           command: |
