--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,13 +36,16 @@ jobs:
           command: |
             . venv/bin/activate
             pytest
+      - setup_remote_docker
+      - run:
+          name: Login to Docker Hub
+          command: echo $DOCKER_LOGIN | docker login -u $DOCKER_USERNAME --password-stdin
       - run:
           name: Containerize
           command: |
             docker build -t oc_lettings .
-            docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-            docker tag oc_lettings $DOCKER_LOGIN/oc_lettings
-            docker push $DOCKER_LOGIN/oc_lettings
+            docker tag oc_lettings $DOCKER_USERNAME/oc_lettings
+            docker push $DOCKER_USERNAME/oc_lettings
       - run:
           name: Notify Sentry of deployment
           command: |
@@ -56,4 +59,3 @@ workflows:
   build:
     jobs:
       - build-and-test
-
