--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: Login to Docker Hub
-          command: echo $DOCKER_LOGIN | docker login -u $DOCKER_USERNAME --password-stdin
+          command: docker login --username=$DOCKER_USERNAME --password=$DOCKER_LOGIN
       - run:
           name: Containerize
           command: |
