--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,8 @@ jobs:
       - run:
           name: Login to Docker Hub
           command: |
-            echo $DOCKER_LOGIN | docker login --username=$DOCKER_USERNAME --password=$DOCKER_LOGIN
+            docker login --username=gavindockerhub --password=dckr_pat_ZWyaGuH2oMs5srHgGRa-
+eE8wSKI
       - run:
           name: Containerize
           command: |
