--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==3.0
 entrypoints==0.3
 exceptiongroup==1.1.0
 flake8==3.7.0
+gunicorn==20.1.0
 iniconfig==2.0.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
