--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ jobs:
   build-and-test:
     docker:
       - image: circleci/python:3.9.7-buster
-    resource_class: small
     steps:
       - checkout
       - restore_cache:
@@ -59,9 +58,7 @@ jobs:
             docker push $DOCKER_USERNAME/oc_lettings
 
   deploy-to-heroku:
-    machine:  
-      image: ubuntu-2004:current
-    resource_class: medium
+    machine: true
     steps:
       - checkout
       - run:
